adding research area one

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,14 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Ice sheet simulations"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /research/simulations
+# venue: "UC San Francisco, Department of Testing"
+# date: 2012-03-01
+# location: "San Francisco, California"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+A focus of my research is using numerical models to simulate the flow of ice sheets. Simply put, ice sheet models are the most powerful tool available for gaining insight about the future. Ice sheet simulations are invaluable for testing how the ice sheet could respond to changes in environmental forcing, including climate change.
+
+For example, my simulations using the Ice-Sheet and Sea-Level System Model (ISSM) have revealed a new potential vulnerability of the Antarctic ice sheet in response to climate warming– the influence of thawing at the ice-bed interface on ice-sheet mass loss [5]*. Model simulations of regions where the bed is currently frozen but close to thawing, just a small increase in basal temperature could be sufficient to decrease basal friction, thereby produce additional mass loss from the Antarctic ice sheet. 
+
