edited text blurb in talk-1.md

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -8,7 +8,9 @@ permalink: /research/simulations
 # location: "San Francisco, California"
 ---
 
-A focus of my research is using numerical models to simulate the flow of ice sheets. Simply put, ice sheet models are the most powerful tool available for gaining insight about the future. Ice sheet simulations are invaluable for testing how the ice sheet could respond to changes in environmental forcing, including climate change.
+A focus of my research is using numerical models to simulate the dynamics of ice sheets. 
+Ice sheet models are a powerful tool for gaining insight about the future. These simulations are essential for understanding how ice sheets might respond to various environmental factors, including climate change.
 
-For example, my simulations using the Ice-Sheet and Sea-Level System Model (ISSM) have revealed a new potential vulnerability of the Antarctic ice sheet in response to climate warming– the influence of thawing at the ice-bed interface on ice-sheet mass loss [5]*. Model simulations of regions where the bed is currently frozen but close to thawing, just a small increase in basal temperature could be sufficient to decrease basal friction, thereby produce additional mass loss from the Antarctic ice sheet. 
+For instance, my work with the Ice-Sheet and Sea-Level System Model (ISSM) has uncovered a new potential vulnerability in the Antarctic ice sheet due to climate warming—the impact of thawing at the ice-bed interface on ice-sheet mass loss. In regions where the bed is currently frozen but close to thawing, even a slight increase in basal temperature could significantly reduce basal friction, leading to additional mass loss from the Antarctic ice sheet.
+
 
